--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>home</title>
+   <title>E-LEARNING</title>
 
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 
@@ -17,7 +17,7 @@
    
    <section class="flex">
 
-      <a href="home.html" class="logo">Education</a>
+      <a href="index.html" class="logo">Education</a>
 
       <form action="search.html" method="post" class="search-form">
          <input type="text" name="search_box" required placeholder="search courses..." maxlength="100">
@@ -45,11 +45,11 @@
       <img src="https://img.freepik.com/premium-photo/simple-study-smile-logo-graduation-hat-cap-toga-arrow_959624-27809.jpg?size=626&ext=jpg&ga=GA1.1.325011917.1722362251&semt=ais_hybrid" class="image" alt="">
       <h3 class="name">SHUBHAM</h3>
       <p class="role">learner</p>
-      <a href="home.html" class="btn">Namaste!</a>
+      <a href="index.html" class="btn">Namaste!</a>
    </div>
 
    <nav class="navbar">
-      <a href="home.html"><i class="fas fa-home"></i><span>Home</span></a>
+      <a href="index.html"><i class="fas fa-index"></i><span>index</span></a>
       <a href="about.html"><i class="fas fa-question"></i><span>About</span></a>
       <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
       <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
@@ -58,7 +58,7 @@
 
 </div>
 
-<section class="home-grid">
+<section class="index-grid">
 
    <h1 class="heading">quick options</h1>
 
@@ -101,7 +101,7 @@
       <div class="box">
          <h3 class="title">become a tutor</h3>
          <p class="tutor">Join us.Your ability to make learning enjoyable and meaningful is a gift</p>
-         <a href="home.html" class="inline-btn">get started</a>
+         <a href="index.html" class="inline-btn">get started</a>
       </div>
 
    </div>
@@ -129,7 +129,7 @@
             <span>10 videos</span>
          </div>
          <h3 class="title">complete HTML tutorial</h3>
-         <a href="home.html" class="inline-btn">view playlist</a>
+         <a href="index.html" class="inline-btn">view playlist</a>
       </div>
 
       <div class="box">
@@ -145,7 +145,7 @@
             <span>10 videos</span>
          </div>
          <h3 class="title">complete CSS tutorial</h3>
-         <a href="home.html" class="inline-btn">view playlist</a>
+         <a href="index.html" class="inline-btn">view playlist</a>
       </div>
 
       <div class="box">
@@ -161,7 +161,7 @@
             <span>10 videos</span>
          </div>
          <h3 class="title">complete JS tutorial</h3>
-         <a href="home.html" class="inline-btn">view playlist</a>
+         <a href="index.html" class="inline-btn">view playlist</a>
       </div>
 
 
@@ -179,7 +179,7 @@
             <span>10 videos</span>
          </div>
          <h3 class="title">complete JQuery tutorial</h3>
-         <a href="home.html" class="inline-btn">view playlist</a>
+         <a href="index.html" class="inline-btn">view playlist</a>
       </div>
 
       <div class="box">
@@ -195,13 +195,13 @@
             <span>10 videos</span>
          </div>
          <h3 class="title">complete SASS tutorial</h3>
-         <a href="home.html" class="inline-btn">view playlist</a>
+         <a href="index.html" class="inline-btn">view playlist</a>
       </div>
 
    </div>
 
    <div class="more-btn">
-      <a href="home.html" class="inline-option-btn">view all courses</a>
+      <a href="index.html" class="inline-option-btn">view all courses</a>
    </div>
 
 </section>
