--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>E-LEARNING</title>
+   <title>home</title>
 
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 
@@ -49,16 +49,16 @@
    </div>
 
    <nav class="navbar">
-      <a href="index.html"><i class="fas fa-index"></i><span>index</span></a>
-      <a href="about.html"><i class="fas fa-question"></i><span>About</span></a>
-      <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
-      <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
-      <a href="contact.html"><i class="fas fa-headset"></i><span>contact us</span></a>
+      <a href="index.html"><i class="fas fa-home"></i><span>Home</span></a>
+      <a href="index.html"><i class="fas fa-question"></i><span>About</span></a>
+      <a href="index.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
+      <a href="index.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
+      <a href="index.html"><i class="fas fa-headset"></i><span>contact us</span></a>
    </nav>
 
 </div>
 
-<section class="index-grid">
+<section class="home-grid">
 
    <h1 class="heading">quick options</h1>
 
@@ -129,7 +129,7 @@
             <span>10 videos</span>
          </div>
          <h3 class="title">complete HTML tutorial</h3>
-         <a href="index.html" class="inline-btn">view playlist</a>
+         <a href="home.html" class="inline-btn">view playlist</a>
       </div>
 
       <div class="box">
@@ -145,7 +145,7 @@
             <span>10 videos</span>
          </div>
          <h3 class="title">complete CSS tutorial</h3>
-         <a href="index.html" class="inline-btn">view playlist</a>
+         <a href="home.html" class="inline-btn">view playlist</a>
       </div>
 
       <div class="box">
@@ -161,7 +161,7 @@
             <span>10 videos</span>
          </div>
          <h3 class="title">complete JS tutorial</h3>
-         <a href="index.html" class="inline-btn">view playlist</a>
+         <a href="home.html" class="inline-btn">view playlist</a>
       </div>
 
 
@@ -179,7 +179,7 @@
             <span>10 videos</span>
          </div>
          <h3 class="title">complete JQuery tutorial</h3>
-         <a href="index.html" class="inline-btn">view playlist</a>
+         <a href="home.html" class="inline-btn">view playlist</a>
       </div>
 
       <div class="box">
@@ -195,13 +195,13 @@
             <span>10 videos</span>
          </div>
          <h3 class="title">complete SASS tutorial</h3>
-         <a href="index.html" class="inline-btn">view playlist</a>
+         <a href="home.html" class="inline-btn">view playlist</a>
       </div>
 
    </div>
 
    <div class="more-btn">
-      <a href="index.html" class="inline-option-btn">view all courses</a>
+      <a href="home.html" class="inline-option-btn">view all courses</a>
    </div>
 
 </section>
