--- a/index.html
+++ b/index.html
@@ -222,12 +222,11 @@
 
 <footer class="footer">
 
-   &copy; copyright @ 2022 by <span>mr. web designer</span> | all rights reserved!
+   &copy; copyright @ 2024 by <span>SHUBHAM ,SANDIPAN</span> | all rights reserved!
 
 </footer>
 
-<!-- custom js file link  -->
-<script src="js/script.js"></script>
+
 
    
 </body>
