--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <span>10 videos</span>
          </div>
          <h3 class="title">complete HTML tutorial</h3>
-         <a href="home.html" class="inline-btn">view playlist</a>
+         <a href="https://youtu.be/G3e-cpL7ofc?si=mU0QQDjx3dUbTXHfl" class="inline-btn">view playlist</a>
       </div>
 
       <div class="box">
@@ -145,7 +145,7 @@
             <span>10 videos</span>
          </div>
          <h3 class="title">complete CSS tutorial</h3>
-         <a href="home.html" class="inline-btn">view playlist</a>
+         <a href="https://youtu.be/G3e-cpL7ofc?si=mU0QQDjx3dUbTXHf" class="inline-btn">view playlist</a>
       </div>
 
       <div class="box">
@@ -161,7 +161,7 @@
             <span>10 videos</span>
          </div>
          <h3 class="title">complete JS tutorial</h3>
-         <a href="home.html" class="inline-btn">view playlist</a>
+         <a href="https://youtu.be/EerdGm-ehJQ?si=x4qmbbwAscHinFgw" class="inline-btn">view playlist</a>
       </div>
 
 
@@ -179,7 +179,7 @@
             <span>10 videos</span>
          </div>
          <h3 class="title">complete JQuery tutorial</h3>
-         <a href="home.html" class="inline-btn">view playlist</a>
+         <a href="https://youtu.be/YFlx1C8XwR0?si=ffAmAzbrrTWmOMWV" class="inline-btn">view playlist</a>
       </div>
 
       <div class="box">
@@ -195,7 +195,7 @@
             <span>10 videos</span>
          </div>
          <h3 class="title">complete SASS tutorial</h3>
-         <a href="home.html" class="inline-btn">view playlist</a>
+         <a href="https://youtu.be/_a5j7KoflTs?si=4MLSA-yXfTDrqp6X" class="inline-btn">view playlist</a>
       </div>
 
    </div>
