--- a/index.html
+++ b/index.html
@@ -1,233 +1,251 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>home</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: 'Roboto', sans-serif;
+            /* background-image: url("back2.jpg");
+            background-repeat: no-repeat;
+            background-size: cover; */
+            background-color: #e8f5e9;
+        }
 
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
+        .container {
+            display: flex;
+            border: 1px solid #ddd;
+            width: 800px;
+            background-color: #fff;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+        }
 
-   <link rel="stylesheet" href="homepage.css">
+        .left {
+            flex: 1;
+            padding: 40px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
 
+        .right {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #f4f4f9;
+        }
+
+        .right img {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+        }
+
+        h1 {
+            font-size: 24px;
+            margin-bottom: 20px;
+            color: #333;
+        }
+
+        h3 {
+            font-size: 16px;
+            margin-top: 0;
+            margin-bottom: 30px;
+            color: #777;
+        }
+
+        .button-container {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 20px;
+            gap: 10px;
+        }
+
+        button {
+            border: 1px solid #ddd;
+            height: 50px;
+            width: 120px;
+            background-color: white;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            transition: background-color 0.3s, box-shadow 0.3s;
+        }
+
+        button:hover {
+            background-color: #f0f0f0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        button img {
+            width: 24px;
+            height: 24px;
+            margin-right: 8px;
+        }
+
+        .line-container {
+            display: flex;
+            align-items: center;
+            margin: 20px 0;
+        }
+
+        .line {
+            flex-grow: 1;
+            height: 1px;
+            background-color: #ddd;
+        }
+
+        .text {
+            margin: 0 10px;
+            white-space: nowrap;
+            color: #999;
+        }
+
+        input[type="email"],
+        input[type="password"] {
+            height: 40px;
+            width: 100%;
+            border-radius: 8px;
+            border: 1px solid #ddd;
+            margin: 10px 0;
+            padding: 10px;
+            font-size: 16px;
+            box-sizing: border-box;
+        }
+
+        .remember-forgot {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 10px 0;
+            font-size: 14px;
+            color: #777;
+            gap: 150px;
+        }
+
+        .remember-forgot label {
+            display: flex;
+            align-items: center;
+        }
+
+        .remember-forgot input[type="checkbox"] {
+            margin-right: 5px;
+        }
+
+        .forgot {
+            color: darkseagreen;
+            text-decoration: none;
+        }
+
+        .forgot:hover {
+            text-decoration: underline;
+        }
+
+        #signin {
+            color: white;
+            background-color: darkseagreen;
+            width: 100%;
+            height: 40px;
+            padding: 10px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 16px;
+            margin-top: 20px;
+        }
+
+        #signin:hover {
+            background-color: #0056b3;
+        }
+
+        .foot {
+            font-size: 14px;
+            margin-top: 20px;
+            color: #777;
+        }
+
+        .foot .signup {
+            color: seagreen;
+            text-decoration: none;
+        }
+
+        .foot .signup:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
+    <div class="container">
+        <div class="left">
+            <h1>Welcome Back</h1>
+            <h3>Please enter your details to sign in</h3>
 
-<header class="header">
-   
-   <section class="flex">
-
-      <a href="index.html" class="logo">Education</a>
-
-      <form action="search.html" method="post" class="search-form">
-         <input type="text" name="search_box" required placeholder="search courses..." maxlength="100">
-         <button type="submit" class="fas fa-search"></button>
-      </form>
-
-      <div class="icons">
-         <div id="menu-btn" class="fas fa-bars"></div>
-         <div id="search-btn" class="fas fa-search"></div>
-         <div id="user-btn" class="fas fa-user"></div>
-         <div id="toggle-btn" class="fas fa-sun"></div>
-      </div>
-
-   </section>
-
-</header>   
-
-<div class="side-bar">
-
-   <div id="close-btn">
-      <i class="fas fa-times"></i>
-   </div>
-
-   <div class="profile">
-      <img src="https://img.freepik.com/premium-photo/simple-study-smile-logo-graduation-hat-cap-toga-arrow_959624-27809.jpg?size=626&ext=jpg&ga=GA1.1.325011917.1722362251&semt=ais_hybrid" class="image" alt="">
-      <h3 class="name">SHUBHAM</h3>
-      <p class="role">learner</p>
-      <a href="index.html" class="btn">Namaste!</a>
-   </div>
-
-   <nav class="navbar">
-      <a href="index.html"><i class="fas fa-home"></i><span>Home</span></a>
-      <a href="index.html"><i class="fas fa-question"></i><span>About</span></a>
-      <a href="index.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
-      <a href="index.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
-      <a href="index.html"><i class="fas fa-headset"></i><span>contact us</span></a>
-   </nav>
-
-</div>
-
-<section class="home-grid">
-
-   <h1 class="heading">quick options</h1>
-
-   <div class="box-container">
-
-      <div class="box">
-         <h3 class="title">likes and comments</h3>
-         <p class="likes">total likes : <span>25</span></p>
-         <a href="#" class="inline-btn">view likes</a>
-         <p class="likes">total comments : <span>12</span></p>
-         <a href="#" class="inline-btn">view comments</a>
-         <p class="likes">saved playlists : <span>4</span></p>
-         <a href="#" class="inline-btn">view playlists</a>
-      </div>
-
-      <div class="box">
-         <h3 class="title">top categories</h3>
-         <div class="flex">
-            <a href="#"><i class="fas fa-code"></i><span>web development</span></a>
-            <a href="#"><i class="fas fa-chart-simple"></i><span>statics</span></a>
-            <a href="#"><i class="fas fa-pen"></i><span>Writing</span></a>
-            <a href="#"><i class="fas fa-chart-line"></i><span>Trading</span></a>
-            <a href="#"><i class="fas fa-cog"></i><span>software</span></a>
-            <a href="#"><i class="fas fa-vial"></i><span>science</span></a>
-         </div>
-      </div>
-
-      <div class="box">
-         <h3 class="title">popular topics</h3>
-         <div class="flex">
-            <a href="#"><i class="fab fa-html5"></i><span>HTML</span></a>
-            <a href="#"><i class="fab fa-css3"></i><span>CSS</span></a>
-            <a href="#"><i class="fab fa-js"></i><span>javascript</span></a>
-            <a href="#"><i class="fab fa-react"></i><span>react</span></a>
-            <a href="#"><i class="fab fa-php"></i><span>PHP</span></a>
-            <a href="#"><i class="fab fa-bootstrap"></i><span>bootstrap</span></a>
-         </div>
-      </div>
-
-      <div class="box">
-         <h3 class="title">become a tutor</h3>
-         <p class="tutor">Join us.Your ability to make learning enjoyable and meaningful is a gift</p>
-         <a href="index.html" class="inline-btn">get started</a>
-      </div>
-
-   </div>
-
-</section>
-
-
-
-<section class="courses">
-
-   <h1 class="heading">our courses</h1>
-
-   <div class="box-container">
-
-      <div class="box">
-         <div class="tutor">
-            <img src="https://images.unsplash.com/photo-1520262494112-9fe481d36ec3?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHRyZWV8ZW58MHx8MHx8fDA%3D" alt="">
-            <div class="info">
-               <h3>Sandipan Naskar</h3>
-               <span>21-10-2022</span>
+            <div class="button-container">
+                <button><img src="image1.jpg" alt="Icon 1"></button>
+                <button><img src="image2.jpg" alt="Icon 2"></button>
+                <button><img src="image3.jpg" alt="Icon 3"></button>
             </div>
-         </div>
-         <div class="thumb">
-            <img src="https://i.ytimg.com/vi/Rek0NWPCNOc/hq720.jpg?sqp=-…RUAAIhCGAE=&rs=AOn4CLDqmheFKTusvfnRAnjN5ZTxxhXFGw" alt="">
-            <span>10 videos</span>
-         </div>
-         <h3 class="title">complete HTML tutorial</h3>
-         <a href="https://youtu.be/G3e-cpL7ofc?si=mU0QQDjx3dUbTXHfl" class="inline-btn">view playlist</a>
-      </div>
 
-      <div class="box">
-         <div class="tutor">
-            <img src="https://images.unsplash.com/photo-1584696996845-1180ccbed580?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fGp1bmdsZXxlbnwwfHwwfHx8MA%3D%3D" alt="">
-            <div class="info">
-               <h3>Janmenjoy Banerjee</h3>
-               <span>21-10-2022</span>
+            <div class="line-container">
+                <span class="line"></span>
+                <span class="text">or</span>
+                <span class="line"></span>
             </div>
-         </div>
-         <div class="thumb">
-            <img src="https://images.unsplash.com/photo-1523437113738-bbd3cc89fb19?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8Y3NzfGVufDB8fDB8fHww" alt="">
-            <span>10 videos</span>
-         </div>
-         <h3 class="title">complete CSS tutorial</h3>
-         <a href="https://youtu.be/G3e-cpL7ofc?si=mU0QQDjx3dUbTXHf" class="inline-btn">view playlist</a>
-      </div>
 
-      <div class="box">
-         <div class="tutor">
-            <img src="https://images.unsplash.com/photo-1549366021-9f761d450615?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8ZWxlcGhhbnR8ZW58MHx8MHx8fDA%3D" alt="">
-            <div class="info">
-               <h3>Shashank Kumar Jha</h3>
-               <span>21-10-2022</span>
+            <form id="loginForm">
+                <input type="email" id="email" placeholder="Enter your email..." name="email" required />
+                <input type="password" id="password" placeholder="Enter your password..." required />
+
+                <div class="remember-forgot">
+                    <label>
+                        <input type="checkbox" name="remember" id="remember"> Remember me
+                    </label>
+                    <a href="forgot-password.html" class="forgot">Forgot password?</a>
+                </div>
+
+                <button id="signin" type="submit">Sign In</button>
+            </form>
+
+            <div class="foot">
+                <p>Don't have an account yet? <a href="signup.html" class="signup">Sign Up</a></p>
             </div>
-         </div>
-         <div class="thumb">
-            <img src="https://i.ytimg.com/vi/W6NZfCO5SIk/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&amp;rs=AOn4CLApPe2n8hQW3A_PMdxtj7DXTHsh2w" alt="">
-            <span>10 videos</span>
-         </div>
-         <h3 class="title">complete JS tutorial</h3>
-         <a href="https://youtu.be/EerdGm-ehJQ?si=x4qmbbwAscHinFgw" class="inline-btn">view playlist</a>
-      </div>
+        </div>
+        <div class="right">
+            <img src="logo.jpg" alt="Login Image">
+        </div>
+    </div>
 
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', function(event) {
+            event.preventDefault(); // Prevent the form from submitting the traditional way
 
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
 
-      <div class="box">
-         <div class="tutor">
-            <img src="https://images.unsplash.com/photo-1513714920387-b00f52df9e23?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHRpZ2VyfGVufDB8fDB8fHww" alt="">
-            <div class="info">
-               <h3>Shubham Dutta</h3>
-               <span>21-10-2022</span>
-            </div>
-         </div>
-         <div class="thumb">
-            <img src="https://images.unsplash.com/photo-1472437774355-71ab6752b434?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8anF1ZXJ5fGVufDB8fDB8fHww" alt="">
-            <span>10 videos</span>
-         </div>
-         <h3 class="title">complete JQuery tutorial</h3>
-         <a href="https://youtu.be/YFlx1C8XwR0?si=ffAmAzbrrTWmOMWV" class="inline-btn">view playlist</a>
-      </div>
-
-      <div class="box">
-         <div class="tutor">
-            <img src="https://images.unsplash.com/photo-1480241352829-e1573ff2414e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fG1vdW50YWlufGVufDB8fDB8fHww" alt="">
-            <div class="info">
-               <h3>Prothoma Biswas</h3>
-               <span>21-10-2022</span>
-            </div>
-         </div>
-         <div class="thumb">
-            <img src="https://i.ytimg.com/vi/_a5j7KoflTs/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLAdR51DALRJrUbtXAcJYSzHekn2ag" alt="">
-            <span>10 videos</span>
-         </div>
-         <h3 class="title">complete SASS tutorial</h3>
-         <a href="https://youtu.be/_a5j7KoflTs?si=4MLSA-yXfTDrqp6X" class="inline-btn">view playlist</a>
-      </div>
-
-   </div>
-
-   <div class="more-btn">
-      <a href="home.html" class="inline-option-btn">view all courses</a>
-   </div>
-
-</section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<footer class="footer">
-
-   &copy; copyright @ 2024 by <span>SHUBHAM ,SANDIPAN</span> | all rights reserved!
-
-</footer>
-
-
-
-   
+            // Check if the email and password match the specified values
+            if (email === 'shubham@gmail.com' && password === 'shubham12345') {
+                alert('Login successful!');
+                window.location.href = 'home.html'; // Redirect to index page
+            } else {
+                alert('Invalid email or password. Please try again.');
+            }
+        });
+    </script>
 </body>
+
 </html>
