--- a/signup.html
+++ b/signup.html
@@ -114,7 +114,7 @@
         </form>
 
         <div class="foot">
-            <p>Already have an account? <a href="login.html" class="signin">Sign In</a></p>
+            <p>Already have an account? <a href="index.html" class="signin">Sign In</a></p>
         </div>
     </div>
 
@@ -133,7 +133,7 @@
 
             // Simulate successful account creation
             alert('Account created successfully!');
-            window.location.href = 'login.html';
+            window.location.href = 'index.html';
         });
     </script>
 </body>
