--- a/home.html
+++ b/home.html
@@ -50,10 +50,10 @@
 
    <nav class="navbar">
       <a href="home.html"><i class="fas fa-home"></i><span>Home</span></a>
-      <a href="home.html"><i class="fas fa-question"></i><span>About</span></a>
-      <a href="home.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
-      <a href="home.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
-      <a href="home.html"><i class="fas fa-headset"></i><span>contact us</span></a>
+      <a href="aboutus.html"><i class="fas fa-question"></i><span>About</span></a>
+      <a href="corse.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
+      <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
+      <a href="contactus.html"><i class="fas fa-headset"></i><span>Contact us</span></a>
    </nav>
 
 </div>
@@ -67,41 +67,27 @@
       <div class="box">
          <h3 class="title">likes and comments</h3>
          <p class="likes">total likes : <span>25</span></p>
-         <a href="#" class="inline-btn">view likes</a>
-         <p class="likes">total comments : <span>12</span></p>
-         <a href="#" class="inline-btn">view comments</a>
+         <a href="likes.html" class="inline-btn">view likes</a>
+         <p class="likes">total comments : <span>5</span></p>
+         <a href="comments.html" class="inline-btn">view comments</a>
          <p class="likes">saved playlists : <span>4</span></p>
-         <a href="#" class="inline-btn">view playlists</a>
+         <a href="savedplaylist.html" class="inline-btn">view playlists</a>
       </div>
-
-      <div class="box">
-         <h3 class="title">top categories</h3>
-         <div class="flex">
-            <a href="#"><i class="fas fa-code"></i><span>web development</span></a>
-            <a href="#"><i class="fas fa-chart-simple"></i><span>statics</span></a>
-            <a href="#"><i class="fas fa-pen"></i><span>Writing</span></a>
-            <a href="#"><i class="fas fa-chart-line"></i><span>Trading</span></a>
-            <a href="#"><i class="fas fa-cog"></i><span>software</span></a>
-            <a href="#"><i class="fas fa-vial"></i><span>science</span></a>
-         </div>
-      </div>
-
       <div class="box">
          <h3 class="title">popular topics</h3>
          <div class="flex">
-            <a href="#"><i class="fab fa-html5"></i><span>HTML</span></a>
-            <a href="#"><i class="fab fa-css3"></i><span>CSS</span></a>
-            <a href="#"><i class="fab fa-js"></i><span>javascript</span></a>
-            <a href="#"><i class="fab fa-react"></i><span>react</span></a>
-            <a href="#"><i class="fab fa-php"></i><span>PHP</span></a>
-            <a href="#"><i class="fab fa-bootstrap"></i><span>bootstrap</span></a>
+            <a href="htmlcourse.html"><i class="fab fa-html5"></i><span>HTML</span></a>
+            <a href="csscourse.html"><i class="fab fa-css3"></i><span>CSS</span></a>
+            <a href="jscourse.html"><i class="fab fa-js"></i><span>javascript</span></a>
+            <a href="jquery.html"><i class="fab fa-react"></i><span>Jquery</span></a>
+            <a href="sasscourse.html"><i class="fa-brands fa-sass"></i><span>Sass</span></a>
          </div>
       </div>
 
       <div class="box">
          <h3 class="title">become a tutor</h3>
          <p class="tutor">Join us.Your ability to make learning enjoyable and meaningful is a gift</p>
-         <a href="home.html" class="inline-btn">get started</a>
+         <a href="job.html" class="inline-btn">get started</a>
       </div>
 
    </div>
@@ -128,7 +114,7 @@
             <img src="https://i.ytimg.com/vi/Rek0NWPCNOc/hq720.jpg?sqp=-…RUAAIhCGAE=&rs=AOn4CLDqmheFKTusvfnRAnjN5ZTxxhXFGw" alt="">
             <span>8 videos</span>
          </div>
-         <h3 class="title">complete HTML tutorial</h3>
+         <h3 class="title">Complete HTML tutorial</h3>
          <a href="htmlcourse.html" class="inline-btn">view playlist</a>
       </div>
 
@@ -144,7 +130,7 @@
             <img src="https://images.unsplash.com/photo-1523437113738-bbd3cc89fb19?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8Y3NzfGVufDB8fDB8fHww" alt="">
             <span>3 videos</span>
          </div>
-         <h3 class="title">complete CSS tutorial</h3>
+         <h3 class="title">Complete CSS tutorial</h3>
          <a href="csscourse.html" class="inline-btn">view playlist</a>
       </div>
 
@@ -160,7 +146,7 @@
             <img src="https://i.ytimg.com/vi/W6NZfCO5SIk/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&amp;rs=AOn4CLApPe2n8hQW3A_PMdxtj7DXTHsh2w" alt="">
             <span>2 videos</span>
          </div>
-         <h3 class="title">complete JS tutorial</h3>
+         <h3 class="title">Complete JS tutorial</h3>
          <a href="jscourse.html" class="inline-btn">view playlist</a>
       </div>
 
@@ -178,7 +164,7 @@
             <img src="https://images.unsplash.com/photo-1472437774355-71ab6752b434?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8anF1ZXJ5fGVufDB8fDB8fHww" alt="">
             <span>3 videos</span>
          </div>
-         <h3 class="title">complete JQuery tutorial</h3>
+         <h3 class="title">Complete JQuery tutorial</h3>
          <a href="jquery.html" class="inline-btn">view playlist</a>
       </div>
 
@@ -194,14 +180,14 @@
             <img src="https://i.ytimg.com/vi/_a5j7KoflTs/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLAdR51DALRJrUbtXAcJYSzHekn2ag" alt="">
             <span>2</span>
          </div>
-         <h3 class="title">complete SASS tutorial</h3>
+         <h3 class="title">Complete SASS tutorial</h3>
          <a href="sasscourse.html" class="inline-btn">view playlist</a>
       </div>
 
    </div>
 
    <div class="more-btn">
-      <a href="home.html" class="inline-option-btn">view all courses</a>
+      <a href="home.html" class="inline-option-btn">"Success is the sum of small efforts, repeated day in and day out." – Robert Collier</a>
    </div>
 
 </section>
