--- a/home.html
+++ b/home.html
@@ -28,7 +28,9 @@
          <div id="menu-btn" class="fas fa-bars"></div>
          <div id="search-btn" class="fas fa-search"></div>
          <div id="user-btn" class="fas fa-user"></div>
-         <div id="toggle-btn" class="fas fa-sun"></div>
+         <a href="index.html">
+            <div id="toggle-btn" class="fa-solid fa-right-from-bracket"></div>
+          </a>
       </div>
 
    </section>
