--- a/forgot-password.html
+++ b/forgot-password.html
@@ -118,7 +118,7 @@
             // Simulate password reset process
             if (otp && newPassword) {
                 alert('Password reset successfully!');
-                window.location.href = 'index.html';
+                window.location.href = 'login.html';
             } else {
                 alert('Please fill in all fields.');
             }
