--- a/index.html
+++ b/index.html
@@ -3,249 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-    
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: 'Roboto', sans-serif;
-            /* background-image: url("back2.jpg");
-            background-repeat: no-repeat;
-            background-size: cover; */
-            background-color: #e8f5e9;
-        }
-
-        .container {
-            display: flex;
-            border: 1px solid #ddd;
-            width: 800px;
-            background-color: #fff;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-        }
-
-        .left {
-            flex: 1;
-            padding: 40px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-        }
-
-        .right {
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #f4f4f9;
-        }
-
-        .right img {
-            height: 100%;
-            width: 100%;
-            object-fit: cover;
-        }
-
-        h1 {
-            font-size: 24px;
-            margin-bottom: 20px;
-            color: #333;
-        }
-
-        h3 {
-            font-size: 16px;
-            margin-top: 0;
-            margin-bottom: 30px;
-            color: #777;
-        }
-
-        .button-container {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 20px;
-            gap: 10px;
-        }
-
-        button {
-            border: 1px solid #ddd;
-            height: 50px;
-            width: 120px;
-            background-color: white;
-            border-radius: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            transition: background-color 0.3s, box-shadow 0.3s;
-        }
-
-        button:hover {
-            background-color: #f0f0f0;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        button img {
-            width: 24px;
-            height: 24px;
-            margin-right: 8px;
-        }
-
-        .line-container {
-            display: flex;
-            align-items: center;
-            margin: 20px 0;
-        }
-
-        .line {
-            flex-grow: 1;
-            height: 1px;
-            background-color: #ddd;
-        }
-
-        .text {
-            margin: 0 10px;
-            white-space: nowrap;
-            color: #999;
-        }
-
-        input[type="email"],
-        input[type="password"] {
-            height: 40px;
-            width: 100%;
-            border-radius: 8px;
-            border: 1px solid #ddd;
-            margin: 10px 0;
-            padding: 10px;
-            font-size: 16px;
-            box-sizing: border-box;
-        }
-
-        .remember-forgot {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin: 10px 0;
-            font-size: 14px;
-            color: #777;
-            gap: 150px;
-        }
-
-        .remember-forgot label {
-            display: flex;
-            align-items: center;
-        }
-
-        .remember-forgot input[type="checkbox"] {
-            margin-right: 5px;
-        }
-
-        .forgot {
-            color: darkseagreen;
-            text-decoration: none;
-        }
-
-        .forgot:hover {
-            text-decoration: underline;
-        }
-
-        #signin {
-            color: white;
-            background-color: darkseagreen;
-            width: 100%;
-            height: 40px;
-            padding: 10px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 16px;
-            margin-top: 20px;
-        }
-
-        #signin:hover {
-            background-color: #0056b3;
-        }
-
-        .foot {
-            font-size: 14px;
-            margin-top: 20px;
-            color: #777;
-        }
-
-        .foot .signup {
-            color: seagreen;
-            text-decoration: none;
-        }
-
-        .foot .signup:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <title>Welcome to Our E-Learning Platform</title>
+    <link rel="stylesheet" href="styles1.css">
 </head>
 <body>
-    <div class="container">
-        <div class="left">
-            <h1>Welcome Back</h1>
-            <h3>Please enter your details to sign in</h3>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="teachers.html">Teachers</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+            </ul>
+            <a href="login.html" class="cta-button sign-in-btn">Sign In</a>
+        </nav>
+    </header>
 
-            <div class="button-container">
-                <button><img src="image1.jpg" alt="Icon 1"></button>
-                <button><img src="image2.jpg" alt="Icon 2"></button>
-                <button><img src="image3.jpg" alt="Icon 3"></button>
+    <main>
+        <section class="intro">
+            <div class="intro-text">
+                <h1>Welcome to Our E-Learning Platform</h1>
+                <p>Your gateway to mastering new skills and knowledge. Explore our courses and learn from the best.</p>
+                <a href="login.html" class="cta-button">Explore Courses</a>
             </div>
-
-            <div class="line-container">
-                <span class="line"></span>
-                <span class="text">or</span>
-                <span class="line"></span>
+            <div class="intro-image">
+                <img src="https://plus.unsplash.com/premium_vector-1720610775865-bc52dffe8ec1?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c3R1ZHl8ZW58MHx8MHx8fDA%3D" alt="Student Learning">
             </div>
+        </section>
 
-            <form id="loginForm">
-                <input type="email" id="email" placeholder="Enter your email..." name="email" required />
-                <input type="password" id="password" placeholder="Enter your password..." required />
+        <section id="teachers" class="section">
+            <h2>Meet Our Teachers</h2>
+            <img src="https://plus.unsplash.com/premium_vector-1682305458400-fab5f07fdc45?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fHRlYWNoZXJzfGVufDB8fDB8fHww" alt="Teachers">
+            <p>Learn more about our experienced teachers.</p>
+            <a href="teachers.html" class="cta-button">View Teachers</a>
+        </section>
 
-                <div class="remember-forgot">
-                    <label>
-                        <input type="checkbox" name="remember" id="remember"> Remember me
-                    </label>
-                    <a href="forgot-password.html" class="forgot">Forgot password?</a>
-                </div>
+        <section id="contact" class="section">
+            <h2>Contact Us</h2>
+            <img src="https://plus.unsplash.com/premium_vector-1697729626394-e8496c51e442?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fGhvdXNlfGVufDB8fDB8fHww" alt="Contact Us">
+            <p>Have questions or need support? Get in touch with us.</p>
+            <a href="contactus.html" class="cta-button">Contact Us</a>
+        </section>
 
-                <button id="signin" type="submit">Sign In</button>
-            </form>
+        <section id="about" class="section">
+            <h2>About Us</h2>
+            <img src="https://plus.unsplash.com/premium_vector-1721386083890-512207fd2161?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bWFufGVufDB8fDB8fHww" alt="About Us">
+            <p>Discover who we are and our mission to provide quality education.</p>
+            <a href="aboutus.html" class="cta-button">Learn More</a>
+        </section>
 
-            <div class="foot">
-                <p>Don't have an account yet? <a href="signup.html" class="signup">Sign Up</a></p>
-            </div>
-        </div>
-        <div class="right">
-            <img src="logo.jpg" alt="Login Image">
-        </div>
-    </div>
+        <section id="signin" class="signin-section">
+            <h2>Sign In</h2>
+            <a href="login.html" class="cta-button">Sign In</a>
+        </section>
+    </main>
 
-    <script>
-        document.getElementById('loginForm').addEventListener('submit', function(event) {
-            event.preventDefault(); // Prevent the form from submitting the traditional way
-
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-
-            // Check if the email and password match the specified values
-            if (email === 'shubham@gmail.com' && password === 'shubham12345') {
-                alert('Login successful!');
-                window.location.href = 'home.html'; // Redirect to index page
-            } else {
-                alert('Invalid email or password. Please try again.');
-            }
-        });
-    </script>
+    <footer>
+        <p>&copy; 2024 E-Learning Platform. All rights reserved.</p>
+    </footer>
 </body>
-
 </html>
