--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <section class="intro">
             <div class="intro-text">
-                <h1>Welcome to Our E-Learning Platform</h1>
+                <h1>Welcome to Our Platform: E-Learning </h1>
                 <p>Your gateway to mastering new skills and knowledge. Explore our courses and learn from the best.</p>
                 <a href="login.html" class="cta-button">Explore Courses</a>
             </div>
